fixtures/negative/invalid_sa_cigar.sam
@SQ	SN:MT	LN:16569
bad-sa-cigar	0	MT	100	60	10M10S	*	0	0	AAAAAAAAAAAAAAAAAAAA	IIIIIIIIIIIIIIIIIIII	SA:Z:MT,300,+,10Q,60,0;
